--- a/web-start/public/index.html
+++ b/web-start/public/index.html
@@ -110,6 +110,14 @@
   </main>
 </div>
 
+<script src="/__/firebase/6.4.0/firebase-app.js"></script>
+<script src="/__/firebase/6.4.0/firebase-auth.js"></script>
+<script src="/__/firebase/6.4.0/firebase-storage.js"></script>
+<script src="/__/firebase/6.4.0/firebase-messaging.js"></script>
+<script src="/__/firebase/6.4.0/firebase-firestore.js"></script>
+<script src="/__/firebase/6.4.0/firebase-performance.js"></script>
+
+<script src="/__/firebase/init.js"></script>
 <!-- This script is created by webpack -->
 <script src="scripts/main.js"></script>
 </body>
